POM file changes